--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -58,7 +58,7 @@ nav{
 	width: 98%;
 	min-width: 500px;
 	font-size: 0.9em;
-	padding 2px;
+	padding: 2px;
 	position: absolute;
 	text-align: center;
 	bottom: 0;
