--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -3,7 +3,7 @@ body{
 }
 
 div{
-	border-style: solid;
+	border-style: none;
 	border-width: 1px;
 	margin: 0 auto;
 }
@@ -17,9 +17,15 @@ div{
 }
 
 #header{
-	text-align: center;
 	width: 98%;
 	min-width: 500px;
+	text-align: center;
+}
+
+#header h1{
+	text-align: left;
+	display: inline-block;
+	margin-right: 10px;
 }
 
 nav{
