--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,5 +1,5 @@
 body{
-
+	background-color: #FFFFCC;
 }
 
 div{
@@ -7,6 +7,7 @@ div{
 	border-width: 1px;
 	margin: 0 auto;
 }
+
 
 .message{
 	border-style: none;
