--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,5 +1,5 @@
 body{
-	background-color: #FFFFCC;
+	background: #ffffcc;
 }
 
 div{
@@ -49,12 +49,16 @@ nav{
 	text-align: center;
 }
 
+#content h3{
+	text-align: left;
+}
+
 #content p{
 	padding: 0 5px;
 }
 
 label{
-	width: 100px;
+	width: 150px;
 }
 
 #footer{
