--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,8 +1,9 @@
 body{
-	background: #ffffcc;
+	background-color: #ffffcc;
 }
 
 div{
+	background-color: #ffffcc;
 	border-style: none;
 	border-width: 1px;
 	margin: 0 auto;
