--- a/stylesheets/bootstrap.css
+++ b/stylesheets/bootstrap.css
@@ -899,7 +899,7 @@ body {
   font-size: 14px;
   line-height: 1.42857143;
   color: #333;
-  background-color: #fff;
+  background-color: #ffffcc;
 }
 input,
 button,
@@ -1215,7 +1215,7 @@ a.bg-danger:hover {
 }
 .page-header {
   padding-bottom: 9px;
-  margin: 40px 0 20px;
+  margin: 40px 20px 20px;
   border-bottom: 1px solid #eee;
 }
 ul,
