--- a/stylesheets/bootstrap.css
+++ b/stylesheets/bootstrap.css
@@ -4093,7 +4093,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   }
 }
 .navbar-default {
-  background-color: #AED8E6;
+  background-color: #f2f2f2;
   border-color: #e7e7e7;
 }
 .navbar-default .navbar-brand {
